--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 	        		<div class="row">
 	        				<div class="highlight six columns">
 	        					<h2>CAMPUS</h2>
-	        					<img src="images/girls.jpg" alt="" width="100%">
+	        					<img src="images/girls.jpg" alt="" width="150px">
 	        					<p>5th Annual Powwow takes place Saturday and Sunday</p>
 	        				</div>
 	        				<div class="highlight six columns">
 	        					<h2>SPORTS</h2>
-	        					<img src="images/soccer.jpg" alt="" width="100%">
+	        					<img src="images/soccer.jpg" alt="" width="123px">
 	        					<p>IU defeats Wisconsin 1-0 in Big Ten quarterfinals</p>
 	        				</div>
 	        			</div>
@@ -91,12 +91,12 @@
 	        			<div class="row">
 	        				<div class="highlight six columns">
 	        					<h2>REGION</h2>
-	        					<img src="images/cook.jpg" alt="" width="100%">
+	        					<img src="images/cook.jpg" alt="" width="130px">
 	        					<p>Soup tasting brings crowds to farmers' market</p>
 	        				</div>
 	        				<div class="highlight six columns">
 	        					<h2>ARTS</h2>
-	        					<img src="images/stage.jpg" alt="" width="100%">
+	        					<img src="images/stage.jpg" alt="" width="155px">
 	        					<p>Soweto Gospel Choir brings energy, song to IU Auditorium</p>
 	        				</div>
 	        			</div>
