--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	        		<div class="story">
 	        			<img src="images/ato.jpg" alt="" width="100%">
 	        			<h2>CAMPUS</h2>
-	        			<h3>Alpha Tau Omega evicted from house</h3>
+	        			<h3><a href="http://awittry.github.io/news-redesign-article/">Alpha Tau Omega evicted from house</a></h3>
 	        			<p>The former members of the IU chapter of ATO were evicted from their fraternity house Nov. 6, a month after their charter was revoked.</p>
 	        			<hr>
 	        		</div>
